--- a/RestopayStaff/RestopayStaff/RestopayStaff.csproj
+++ b/RestopayStaff/RestopayStaff/RestopayStaff.csproj
@@ -41,6 +41,10 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <HintPath>packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -73,8 +77,8 @@
     <Compile Include="DBAdminPage.xaml.cs">
       <DependentUpon>DBAdminPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="OrdersArchivePage - Copy.xaml.cs">
-      <DependentUpon>OrdersArchivePage - Copy.xaml</DependentUpon>
+    <Compile Include="OrdersArchivePage.xaml.cs">
+      <DependentUpon>OrdersArchivePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="OwnerPage.xaml.cs">
       <DependentUpon>OwnerPage.xaml</DependentUpon>
@@ -135,7 +139,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="OrdersArchivePage - Copy.xaml">
+    <Page Include="OrdersArchivePage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
